# cpp-playground

./: .gitignore
cache_efficient_matrix_ops/: CMakeLists.txt  Sanitizers.cmake
cache_efficient_matrix_ops/app/: benchmark.cpp  test_fft.cpp  test_matrix_multiply.cpp  test_matrix_transpose.cpp
cache_efficient_matrix_ops/include/ra/: fft.hpp  matrix_multiply.hpp  matrix_transpose.hpp
cexpr_basic_string/: CMakeLists.txt
cexpr_basic_string/app/: test_cexpr_basic_string.cpp
cexpr_basic_string/include/ra/: cexpr_basic_string.hpp
cexpr_mandelbrot/: mbset.pnm
cexpr_mandelbrot/include/ra/: cexpr_basic_string.hpp
cexpr_math/: CMakeLists.txt
cexpr_math/app/: test_cexpr_math.cpp
discrete_time_biquad_filters/: CMakeLists.txt
discrete_time_biquad_filters/app/: test_biquad_filter.cpp
discrete_time_biquad_filters/include/ra/: biquad_filter.hpp  cexpr_math.hpp
fifo_queue/: CMakeLists.txt  Sanitizers.cmake
fifo_queue/app/: test_queue.cpp
intrusive_linked_list/: CMakeLists.txt  notes.md
intrusive_linked_list/app/: test_intrusive_list.cpp
intrusive_linked_list/include/ra/: intrusive_list.hpp  iterator_facade.hpp  parent_from_member.hpp
linear_congruent_generator/: CMakeLists.txt
linear_congruent_generator/include/ra/: random.hpp
linear_congruent_generator/lcg/app/: test_random.cpp
linear_congruent_generator/lib/: random.cpp
mandelbrot/: CMakeLists.txt  first_attempt.pnm
mandelbrot/app/: test_mandelbrot.cpp
mandelbrot/include/ra/: mandelbrot.hpp
multi_threaded_julia_set/: CMakeLists.txt  test_script.sh
multi_threaded_julia_set/app/: benchmark.cpp  test_julia_set.cpp
multi_threaded_julia_set/include/ra/: julia_set.hpp
multi_threaded_julia_set/lib/: thread_pool.cpp
ordered_set/: CMakeLists.txt
ordered_set/app/: test_sv_set.cpp
ordered_set/include/ra/: sv_set.hpp
thread_pool/: CMakeLists.txt  test_script.sh
thread_pool/app/: test_thread_pool.cpp
thread_pool/include/ra/: queue.hpp  thread_pool.hpp
thread_pool/lib/: .thread_pool.cpp.swp
